
Mon May 3rd, 2004
 - added Makefile with settings for Linux
Sat May 1st, 2004
 - initial public release
