@@ -1,4 +1,7 @@
 
+Tue May 4th, 2004
+ - modified Makefile for Cygwin/Windows support
+ - changed ssize_t to size_t for Windows
 Mon May 3rd, 2004
  - added Makefile with settings for Linux
 Sat May 1st, 2004
